--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,25 +3,35 @@ Type: Package
 Date: 2021-04-15
 Title: B cell receptor immune repertoire quality control and analysis
 Version: 0.1.0
-Author: Rodrigo Arcoverde
+Authors@R: 
+    c(person(given = "Rodrigo",
+             family = "Arcoverde Cerveira",
+             role = c("aut", "cre", "cph"),
+             email = "rodrigo.arcoverdi@gmail.com",
+             comment = c(ORCID = "0000-0002-1145-2534")))
 Maintainer: Rodrigo Arcoverde Cerveira <rodrigo.arcoverdi@gmail.com>
 Description: RepertoiR was created to do quality control of VDJ sequencing, 
     combining single-cell sorted data and specificity with sanguer sequences. 
-    In addition, it also includes analysis tools of VDJ sequences from standard AIRR-compliant datasets.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
+    dplyr
+Imports: rmarkdown,
+    data.table,
+    Biostrings,
+    parallel,
+    stats,
+    plyr,
     knitr,
-    dplyr,
     ggplot2,
     gridExtra,
-    devtools,
     DECIPHER,
-    Biostrings,
     stringr,
     sangerseqR,
     kableExtra,
     tibble,
-    parallel
+    scales,
+    rlang,
+    flowCore
 RoxygenNote: 7.1.2
