--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: RepertoiR
+Package: scifer
 Type: Package
 Date: 2021-04-15
-Title: B cell receptor immune repertoire quality control and analysis
+Title: scifer: Single-cell Immunoglobulin Filtering of Sanger sequences
 Version: 0.1.0
 Authors@R: 
     c(person(given = "Rodrigo",
@@ -10,8 +10,12 @@ Authors@R:
              email = "rodrigo.arcoverdi@gmail.com",
              comment = c(ORCID = "0000-0002-1145-2534")))
 Maintainer: Rodrigo Arcoverde Cerveira <rodrigo.arcoverdi@gmail.com>
-Description: RepertoiR was created to do quality control of VDJ sequencing, 
-    combining single-cell sorted data and specificity with sanguer sequences. 
+Description: Have you ever index sorted cells in a 96 or 384-well plate and then sequenced using Sanger sequencing? 
+    If so, you probably had some strungle to either check the chromatograms of each cell sequenced manually, 
+    or when you tried to identify which cell was sorted where after sequencing the plate. 
+    Scifer was developed to solve this issue by performing basic quality control of Sanger sequences 
+    and merging flow cytometry data from probed single-cell sorted B cells with sequencing data. 
+    scifer can export summary tables, fasta files, chromatograms for visual inspection, and generate an interactive report.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
