--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,11 @@ export(quality_report)
 export(secondary_peaks)
 export(summarise_abi_file)
 export(summarise_quality)
-import(Biostrings, except = c(collapse, union, intersect, setdiff, setequal))
+import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
 import(dplyr)
-import(flowCore, except = filter)
+import(flowCore, except=c(filter, cytolib_LdFlags))
 import(ggplot2)
+import(knitr)
 importFrom(Biostrings,BStringSet)
 importFrom(Biostrings,writeXStringSet)
 importFrom(DECIPHER,AlignSeqs)
