fix bioccheck errors, notes and warnings

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports: dplyr,
     tibble,
     scales,
     rlang,
-    flowCore
+    flowCore,
+    methods
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
