--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
+importFrom(methods,is)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(plyr,mapvalues)
