--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: scifer
 Type: Package
 Title: Scifer: Single-Cell Immunoglobulin Filtering of Sanger Sequences
-Version: 0.99.1
+Version: 0.99.2
 Authors@R: 
     c(person(given = "Rodrigo",
              family = "Arcoverde Cerveira",
@@ -11,7 +11,7 @@ Authors@R:
 URL: https://github.com/rodrigarc/scifer
 BugReports: https://github.com/rodrigarc/scifer/issues
 Description: Have you ever index sorted cells in a 96 or 384-well plate and then sequenced using Sanger sequencing? 
-    If so, you probably had some struggle to either check the chromatogram of each cell sequenced manually, 
+    If so, you probably had some struggles to either check the chromatogram of each cell sequenced manually, 
     or when you tried to identify which cell was sorted where after sequencing the plate. 
     Scifer was developed to solve this issue by performing basic quality control of Sanger sequences 
     and merging flow cytometry data from probed single-cell sorted B cells with sequencing data. 
@@ -46,5 +46,6 @@ Imports: dplyr,
     rlang,
     flowCore,
     methods
+Suggests: BiocStyle
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
