--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,9 +45,10 @@ Imports: dplyr,
     rlang,
     flowCore,
     methods
-Suggests: BiocStyle
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 Suggests: 
+    fs,
+    BiocStyle,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
