--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,8 @@ Imports: dplyr,
     scales,
     rlang,
     flowCore,
-    methods
+    methods,
+    basilisk
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests: 
@@ -63,3 +64,4 @@ Suggests:
     BiocStyle,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+StagedInstall: no
