Function for IgBlast
Added function for igblast via basilisk
Arguments for the function paths to database and fasta files.
Needs updated markdown comments describing the function
Needs function optimization

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,7 +56,8 @@ Imports: dplyr,
     rlang,
     flowCore,
     methods,
-    basilisk
+    basilisk,
+    reticulate
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests: 
