--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,24 @@
 export(df_to_fasta)
 export(fcs_plot)
 export(fcs_processing)
+export(igblast)
 export(quality_report)
 export(secondary_peaks)
 export(summarise_abi_file)
 export(summarise_quality)
 import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
+import(basilisk)
 import(dplyr)
 import(flowCore, except=c(filter, cytolib_LdFlags))
 import(ggplot2)
+import(here)
 import(knitr)
+import(reticulate)
 importFrom(Biostrings,BStringSet)
 importFrom(Biostrings,writeXStringSet)
 importFrom(DECIPHER,AlignSeqs)
 importFrom(DECIPHER,ConsensusSequence)
+importFrom(basilisk,BasiliskEnvironment)
 importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
 importFrom(kableExtra,kable)
