Update dependencies for basilisk
- building and R CMD check working on macOS apple and intel processors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,9 @@ Imports: dplyr,
     flowCore,
     methods,
     basilisk,
-    reticulate
+    reticulate,
+    here,
+    utils
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Suggests: 
