--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,3 +45,4 @@ importFrom(stats,na.omit)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_locate_all)
 importFrom(tibble,rownames_to_column)
+importFrom(utils,read.table)
