--- a/.github/workflows/master_r-cmd-check.yaml
+++ b/.github/workflows/master_r-cmd-check.yaml
@@ -2,11 +2,11 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, r-cmd-check_master]
+    branches: [main, master]
   pull_request:
-    branches: [main, master, r-cmd-check_master]
+    branches: [main, master]
 
-name: master_r-cmd-check
+name: R-CMD-check
 
 permissions: read-all
 
@@ -21,12 +21,11 @@ jobs:
       matrix:
         config:
           - {os: macos-latest,   r: 'release'}
-          - {os: macos-latest,   r: '4.2'}
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: '4.2'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
