--- a/.github/workflows/master_r-cmd-check.yaml
+++ b/.github/workflows/master_r-cmd-check.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, r-cmd-check_master]
   pull_request:
-    branches: [main, master]
+    branches: [main, master, r-cmd-check_master]
 
 name: R-CMD-check
 
