--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(summarise_abi_file)
 export(summarise_quality)
 import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
 import(basilisk)
+import(basilisk.utils)
 import(dplyr)
 import(flowCore, except=c(filter, cytolib_LdFlags))
 import(ggplot2)
