Roxygenised changes after previous commit
--Roxygenised changes after previous commit
fe4e7f097ee7852ef5661fe3d1deac874690bafb
--Changes in igblast.Rd and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(summarise_abi_file)
 export(summarise_quality)
 import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
 import(basilisk)
-import(basilisk.utils)
 import(dplyr)
 import(flowCore, except=c(filter, cytolib_LdFlags))
 import(ggplot2)
@@ -22,6 +21,8 @@ importFrom(Biostrings,writeXStringSet)
 importFrom(DECIPHER,AlignSeqs)
 importFrom(DECIPHER,ConsensusSequence)
 importFrom(basilisk,BasiliskEnvironment)
+importFrom(basilisk.utils,isMacOSX)
+importFrom(basilisk.utils,isMacOSXArm)
 importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
 importFrom(kableExtra,kable)
