--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ import(ggplot2)
 import(here)
 import(knitr)
 import(reticulate)
+importFrom(BiocBaseUtils,askUserYesNo)
 importFrom(Biostrings,BStringSet)
 importFrom(Biostrings,writeXStringSet)
 importFrom(DECIPHER,AlignSeqs)
@@ -25,6 +26,7 @@ importFrom(basilisk.utils,isMacOSX)
 importFrom(basilisk.utils,isMacOSXArm)
 importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
+importFrom(here,here)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
 importFrom(methods,is)
