--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,11 +2,11 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, r-cmd-check_devel]
   pull_request:
-    branches: [main, master]
+    branches: [main, master, r-cmd-check_devel]
 
-name: R-CMD-check.yaml
+name: devel_R-CMD-check.yaml
 
 permissions: read-all
 
