--- a/.github/workflows/master_r-cmd-check.yaml
+++ b/.github/workflows/master_r-cmd-check.yaml
@@ -21,11 +21,12 @@ jobs:
       matrix:
         config:
           - {os: macos-latest,   r: 'release'}
+          - {os: macos-latest,   r: '4.2'}
           - {os: windows-latest, r: 'release'}
+          - {os: windows-latest, r: '4.2'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
-
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
