--- a/.github/workflows/master_test-coverage.yaml
+++ b/.github/workflows/master_test-coverage.yaml
@@ -5,6 +5,7 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+  workflow_dispatch:  # 👈 allows manual triggering
 
 name: test-coverage
 
