Refactors basilisk environment setup
Streamlines the basilisk environment setup by removing direct calls to basilisk functions and replacing them with simpler OS checks.

Updates dependencies and imports, adding pwalign for string comparison.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,6 @@ importFrom(Biostrings,BStringSet)
 importFrom(Biostrings,writeXStringSet)
 importFrom(DECIPHER,AlignSeqs)
 importFrom(DECIPHER,ConsensusSequence)
-importFrom(basilisk,BasiliskEnvironment)
-importFrom(basilisk,isMacOSX)
-importFrom(basilisk,isMacOSXArm)
-importFrom(basilisk,isWindows)
 importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
 importFrom(here,here)
@@ -32,6 +28,7 @@ importFrom(methods,is)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(plyr,mapvalues)
+importFrom(pwalign,compareStrings)
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
 importFrom(sangerseqR,chromatogram)
