Fix `compareStrings` warning
Excludes `compareStrings` from the imported Biostrings functions in the NAMESPACE file.

This resolves a warning potentially caused by conflicts with pwalign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(igblast)
 export(quality_report)
 export(summarise_abi_file)
 export(summarise_quality)
-import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
+import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal, compareStrings))
 import(basilisk)
 import(dplyr)
 import(flowCore, except=c(filter, cytolib_LdFlags))
