Refactors igblast wrapper for improved reliability
Migrates the igblast wrapper to use `basilisk.utils` for environment creation, enhancing robustness across different platforms. The new basilisk package now only works with pure python environments (aka pip packages), so packages only available in conda, such as igblast, could not use it anymore.
Removes the dedicated `basilisk.R` file, simplifying the codebase.
Improves error handling and input validation for database and fasta file paths, providing clearer messages to the user.
Updates the igblast function to be compatible with various operating systems.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,9 @@ export(igblast)
 export(quality_report)
 export(summarise_abi_file)
 export(summarise_quality)
-import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal, compareStrings))
+import(Biostrings, except=c(collapse, union, intersect, setdiff, setequal))
 import(basilisk)
+import(basilisk.utils)
 import(dplyr)
 import(flowCore, except=c(filter, cytolib_LdFlags))
 import(ggplot2)
@@ -21,7 +22,6 @@ importFrom(DECIPHER,AlignSeqs)
 importFrom(DECIPHER,ConsensusSequence)
 importFrom(data.table,rbindlist)
 importFrom(gridExtra,grid.arrange)
-importFrom(here,here)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
 importFrom(methods,is)
